--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DZ-9</title>
+    <title>DZ--9</title>
     
     <script type="module" src="./js/1-gallery.js"></script>
     <script type="module" src="./js/2-form.js"></script>
